fixed overlapping components

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,13 +1,9 @@
 .header {
   border: 2px solid red;
-  display: flex;
   width: 100%;
-  top: 0px;
-  bottom: 20px;
-  height: 180px;
+  height: 110px;
   margin: 0;
   padding: 0;
   display: block;
   box-sizing: border-box;
-  position: absolute;
 }
