--- a/client/src/components/Links.css
+++ b/client/src/components/Links.css
@@ -1,6 +1,6 @@
 .links {
   width: 300px;
   height: 100vh;
-  display: inline-block;
+  display: block;
   position: absolute;
 }
